--- a/style.css
+++ b/style.css
@@ -7,27 +7,37 @@ body {
 h1,
 h2 {
   margin: 0;
+  padding-bottom: 30px;
 }
 
 .container {
+  margin: 50px auto;
   max-width: 500px;
   padding: 30px 50px;
   background: #836482;
   color: #f1f3ef;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .btn {
   background: #526869;
   color: #f1f3ef;
   border: 1px solid;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
   font-weight: bold;
   transition: all 150ms ease-in-out;
+  margin-bottom: 30px;
+  padding: 10px 25px;
+  border-radius: 5px;
 }
 
 .btn:hover {
   background: #f1f3ef;
   color: #526869;
   border-color: #526869;
+
+  cursor: pointer;
 }
 
 .grid {
