--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h2 {
   border: 1px solid;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
   font-weight: bold;
+  font-size: 16px;
   transition: all 150ms ease-in-out;
   margin-bottom: 30px;
   padding: 10px 25px;
@@ -36,8 +37,11 @@ h2 {
   background: #f1f3ef;
   color: #526869;
   border-color: #526869;
-
   cursor: pointer;
+}
+
+#restart {
+  display: none;
 }
 
 .grid {
