--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ h2 {
 
 #restart {
   display: none;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  background: #f1f3ef;
+  color: #526869;
 }
 
 .grid {
